--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "md5": "^2.2.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "urlencode": "^1.1.0"
   }
 }
